--- a/README
+++ b/README
@@ -1,9 +1,12 @@
-   This is the IPC::Locker Perl Package.
+1 IPC::Locker
+*************
 
-Copyright
-=========
+This is the IPC::Locker Perl Package.
 
-   This package is Copyright 1999-2003 by Wilson Snyder
+1.1 Copyright
+=============
+
+This package is Copyright 1999-2003 by Wilson Snyder
 <wsnyder@wsnyder.org>.
 
    You may distribute under the terms of either the GNU General Public
@@ -13,13 +16,13 @@ file.
    This code is provided with no warranty of any kind, and is used
 entirely at your own risk.
 
-Description
-===========
+1.2 Description
+===============
 
-   This package provides a server for locks and a package for clients
-to access that server.  The result is that clients can access named
-locks on a Internet wide bases, solving critical section problems
-without the mess of NFS or other file locking techniques.
+This package provides a server for locks and a package for clients to
+access that server.  The result is that clients can access named locks
+on a Internet wide bases, solving critical section problems without the
+mess of NFS or other file locking techniques.
 
    For example:
 
@@ -29,18 +32,18 @@ without the mess of NFS or other file locking techniques.
 
    See `man IPC::Locker' after installation.
 
-Obtaining Distribution
-======================
+1.3 Obtaining Distribution
+==========================
 
-   The latest version is available at `http://www.perl.org/CPAN/'
+The latest version is available at `http://www.perl.org/CPAN/'
 
    Download the latest package from that site, and decompress.  `gunzip
 IPC::Locker_version.tar.gz ; tar xvf IPC::Locker_version.tar'
 
-Supported Systems
-=================
+1.4 Supported Systems
+=====================
 
-   This version of IPC::Locker has been built and tested on:
+This version of IPC::Locker has been built and tested on:
 
    * i386-linux
 
@@ -48,8 +51,8 @@ Supported Systems
 
    It should run on any system with perl and TCP/IP socketing.
 
-Installation
-============
+1.5 Installation
+================
 
   1. `cd' to the directory containing this README notice.
 
