Fix pidwatch SIGCHILD race
git-svn-id: file://localhost/svn/perltools/IPC-Locker/trunk/IPC-Locker@33 5359c949-c622-0410-b959-aa3a61b3b029

--- a/Changes
+++ b/Changes
@@ -2,6 +2,10 @@ Revision history for Perl extension IPC::Locker
 
 The contributors that suggested a given feature are shown in [].
 
+* IPC::Locker 1.44***
+
+***	Fix pidwatch dieing due to SIGCHILD race. [by Greg Waters]
+
 * IPC::Locker 1.434 10/13/2005
 
 **	NEWS is now renamed Changes, to support CPAN indexing. [Offer Kaye]
