Add nagios plugins
git-svn-id: file://localhost/svn/perltools/IPC-Locker/trunk/IPC-Locker@35 5359c949-c622-0410-b959-aa3a61b3b029

--- a/Changes
+++ b/Changes
@@ -4,6 +4,8 @@ The contributors that suggested a given feature are shown in [].
 
 * IPC::Locker 1.440***
 
+***	Add Nagios example files.
+
 ***	Fix pidwatch dieing due to SIGCHILD race. [by Greg Waters]
 
 * IPC::Locker 1.434 10/13/2005
