--- a/Changes
+++ b/Changes
@@ -2,9 +2,9 @@ Revision history for Perl extension IPC::Locker
 
 The contributors that suggested a given feature are shown in [].
 
-* IPC::Locker 1.44**
+* IPC::Locker 1.450 5/16/2006
 
-**	Created lockersh program.
+**	Created lockersh program for adding locks around other programs.
 
 ***	Add IPCLOCKER_HOST and IPCLOCKER_PORT environment variables.
 
@@ -67,7 +67,7 @@ The contributors that suggested a given feature are shown in [].
 
 ***	Fixed bug which made lockerd --port option not work.
 
-***	Allow colon seperated hostnames for fallback hosting.
+***	Allow colon separated hostnames for fallback hosting.
 
 * IPC::Locker 1.200 11/15/2001
 
