Single quote all arguments
git-svn-id: file://localhost/svn/perltools/IPC-Locker/trunk/IPC-Locker@44 5359c949-c622-0410-b959-aa3a61b3b029

--- a/Changes
+++ b/Changes
@@ -2,6 +2,10 @@ Revision history for Perl extension IPC::Locker
 
 The contributors that suggested a given feature are shown in [].
 
+* IPC::Locker 1.45**
+
+***	All program arguments to pidwatch are now single quoted '' to the shell.
+
 * IPC::Locker 1.450 5/16/2006
 
 **	Created lockersh program for adding locks around other programs.
