Cache IP addresses to avoid name server traffic.
git-svn-id: file://localhost/svn/perltools/IPC-Locker/trunk/IPC-Locker@45 5359c949-c622-0410-b959-aa3a61b3b029

--- a/Changes
+++ b/Changes
@@ -4,9 +4,9 @@ The contributors that suggested a given feature are shown in [].
 
 * IPC::Locker 1.45**
 
-***	All program arguments to pidwatch are now single quoted '' to the shell.
+****	Cache IP addresses to avoid name server traffic. [by Greg Waters]
 
-* IPC::Locker 1.450 5/16/2006
+* IPC::Locker 1.450 5/16/2006 (Alpha release only)
 
 **	Created lockersh program for adding locks around other programs.
 
