Add pidwatch --foreground
git-svn-id: file://localhost/svn/perltools/IPC-Locker/trunk/IPC-Locker@48 5359c949-c622-0410-b959-aa3a61b3b029

--- a/Changes
+++ b/Changes
@@ -2,6 +2,10 @@ Revision history for Perl extension IPC::Locker
 
 The contributors that suggested a given feature are shown in [].
 
+* IPC::Locker 1.45**
+
+***	Add pidwatch --foreground switch.
+
 * IPC::Locker 1.451 5/23/2006
 
 ****	Cache IP addresses to avoid name server traffic. [by Greg Waters]
