--- a/Changes
+++ b/Changes
@@ -6,6 +6,8 @@ The contributors that suggested a given feature are shown in [].
 
 ***	Fix requested pid not being passed down to server.  [Vasu Arasanipalai]
 
+****	Fix --help to use Pod::Usage instead of depreciated pod2text.
+
 * IPC::Locker 1.461 1/24/2007
 
 ****	Pass full hostname through IPC::PidStat daemons.
