--- a/Changes
+++ b/Changes
@@ -2,6 +2,10 @@ Revision history for Perl extension IPC::Locker
 
 The contributors that suggested a given feature are shown in [].
 
+* IPC::Locker 1.463 4/5/2007
+
+****	Fix 'make test' issues on systems without Nagios.  [cpan-testers]
+
 * IPC::Locker 1.462 4/3/2007
 
 ***	Fix requested pid not being passed down to server.  [Vasu Arasanipalai]
