Move scripts under script/ so we can add help test
git-svn-id: file://localhost/svn/perltools/IPC-Locker/trunk/IPC-Locker@71 5359c949-c622-0410-b959-aa3a61b3b029

--- a/Changes
+++ b/Changes
@@ -2,6 +2,10 @@ Revision history for Perl extension IPC::Locker
 
 The contributors that suggested a given feature are shown in [].
 
+* IPC::Locker 1.46***
+
+****	Scripts are now distributed under the script directory.
+
 * IPC::Locker 1.463 4/5/2007
 
 ****	Fix 'make test' issues on systems without Nagios.  [cpan-testers]
