--- a/Changes
+++ b/Changes
@@ -2,7 +2,7 @@ Revision history for Perl extension IPC::Locker
 
 The contributors that suggested a given feature are shown in [].
 
-* IPC::Locker 1.46***
+* IPC::Locker 1.470 5/4/2007
 
 **	Add uriexec.  [by Jeff Dutton]
 
