--- a/Changes
+++ b/Changes
@@ -2,7 +2,7 @@ Revision history for Perl extension IPC::Locker
 
 The contributors that suggested a given feature are shown in [].
 
-* IPC::Locker 1.47***
+* IPC::Locker 1.471 7/5/2007
 
 ****	Fix loosing $@ in evals due to IO::Socket::INET bug.  [Bryce Denney]
 
