Fix t/40_locker.t failing due to no server
git-svn-id: file://localhost/svn/perltools/IPC-Locker/trunk/IPC-Locker@83 5359c949-c622-0410-b959-aa3a61b3b029

--- a/Changes
+++ b/Changes
@@ -2,6 +2,10 @@ Revision history for Perl extension IPC::Locker
 
 The contributors that suggested a given feature are shown in [].
 
+* IPC::Locker 1.472 7/16/2007
+
+****	Fix locker test.  [cpan-testers]
+
 * IPC::Locker 1.471 7/5/2007
 
 ****	Fix loosing $@ in evals due to IO::Socket::INET bug.  [Bryce Denney]
