Move from IO::Select to IO::Poll as doesn't have # file limit
git-svn-id: file://localhost/svn/perltools/IPC-Locker/trunk/IPC-Locker@88 5359c949-c622-0410-b959-aa3a61b3b029

--- a/Changes
+++ b/Changes
@@ -2,6 +2,10 @@ Revision history for Perl extension IPC::Locker
 
 The contributors that suggested a given feature are shown in [].
 
+* IPC::Locker 1.47***
+
+****	Fix server to support over 1024 client connections.
+
 * IPC::Locker 1.472 7/16/2007
 
 ****	Fix locker test.  [cpan-testers]
