Minor performance enhancements
git-svn-id: file://localhost/svn/perltools/IPC-Locker/trunk/IPC-Locker@90 5359c949-c622-0410-b959-aa3a61b3b029

--- a/Changes
+++ b/Changes
@@ -6,6 +6,8 @@ The contributors that suggested a given feature are shown in [].
 
 ****	Fix server to support over 1024 client connections.
 
+****	Lockerd performance enhancements to support > 1000 requests/second.
+
 * IPC::Locker 1.472 7/16/2007
 
 ****	Fix locker test.  [cpan-testers]
