Fix multiple calls to lock not returning ownership
git-svn-id: file://localhost/svn/perltools/IPC-Locker/trunk/IPC-Locker@95 5359c949-c622-0410-b959-aa3a61b3b029

--- a/Changes
+++ b/Changes
@@ -6,7 +6,7 @@ The contributors that suggested a given feature are shown in [].
 
 ****	Added return type suppression to IPC::PidStat::pid_request.
 
-****	Fix server to support over 1024 client connections.
+****	Fix server to support over 1024 client connections.  [Bryce Denney]
 
 ****	Lockerd performance enhancements to support > 3000 requests/second.
 
