--- a/Changes
+++ b/Changes
@@ -2,7 +2,7 @@ Revision history for Perl extension IPC::Locker
 
 The contributors that suggested a given feature are shown in [].
 
-* IPC::Locker 1.480***
+* IPC::Locker 1.480 2/1/2008
 
 ****	Added return type suppression to IPC::PidStat::pid_request.
 
