--- a/Changes
+++ b/Changes
@@ -2,6 +2,10 @@ Revision history for Perl extension IPC::Locker
 
 The contributors that suggested a given feature are shown in [].
 
+* IPC::Locker 1.481 2/9/2008
+
+****	Fix Perl 5.6.2 compile warnings.  [cpan-testers]
+
 * IPC::Locker 1.480 2/1/2008
 
 ****	Added return type suppression to IPC::PidStat::pid_request.
