--- a/Changes
+++ b/Changes
@@ -165,9 +165,9 @@ DESCRIPTION: Documentation on change history for this package
 
 This uses outline mode in Emacs.  See C-h m [M-x describe-mode].
 
-Copyright 1999-2008 by Wilson Snyder.  This program is free software;
+Copyright 1999-2009 by Wilson Snyder.  This program is free software;
 you can redistribute it and/or modify it under the terms of either the GNU
-General Public License or the Perl Artistic License.
+Lesser General Public License or the Perl Artistic License.
 
 Local variables:
 mode: outline
