--- a/Changes
+++ b/Changes
@@ -2,6 +2,10 @@ Revision history for Perl extension IPC::Locker
 
 The contributors that suggested a given feature are shown in [].
 
+* IPC::Locker 1.48***
+
+**	This package is now licensed under LGPL v3 and/or Artistic v2.0.
+
 * IPC::Locker 1.483 2008/07/28
 
 ****	Fix pidwatch --killer --signal to prepend dash.  [Bryce Denney]
@@ -167,7 +171,7 @@ This uses outline mode in Emacs.  See C-h m [M-x describe-mode].
 
 Copyright 1999-2009 by Wilson Snyder.  This program is free software;
 you can redistribute it and/or modify it under the terms of either the GNU
-Lesser General Public License or the Perl Artistic License.
+Lesser General Public License Version 3 or the Perl Artistic License Version 2.0.
 
 Local variables:
 mode: outline
