--- a/Changes
+++ b/Changes
@@ -2,7 +2,7 @@ Revision history for Perl extension IPC::Locker
 
 The contributors that suggested a given feature are shown in [].
 
-* IPC::Locker 1.48***
+* IPC::Locker 1.484 2009/05/08
 
 **	This package is now licensed under LGPL v3 and/or Artistic v2.0.
 
