--- a/Changes
+++ b/Changes
@@ -2,6 +2,11 @@ Revision history for Perl extension IPC::Locker
 
 The contributors that suggested a given feature are shown in [].
 
+* IPC::Locker 1.493 devel
+
+***     Fix debug message.
+
+
 * IPC::Locker 1.492 2013/01/31
 
 ***     Add --host option to lockerd.  [Victor Gamov]
@@ -238,7 +243,7 @@ DESCRIPTION: Documentation on change history for this package
 
 This uses outline mode in Emacs.  See C-h m [M-x describe-mode].
 
-Copyright 1999-2013 by Wilson Snyder.  This program is free software;
+Copyright 1999-2016 by Wilson Snyder.  This program is free software;
 you can redistribute it and/or modify it under the terms of either the GNU
 Lesser General Public License Version 3 or the Perl Artistic License Version 2.0.
 
